--- a/src/site/auth-test.njk
+++ b/src/site/auth-test.njk
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Adaptación de código publicadoe en https://www.raymondcamden.com/2022/07/11/using-auth0-login-with-javascript-some-tips -->
 <html lang="en">
 <head>
 	<meta charset="utf-8">
