--- a/src/site/404.njk
+++ b/src/site/404.njk
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="{{ meta.mainLanguage }}">
     <head>
-        <title>Nothing here</title>
+        <title>Nada aquí</title>
         <link href="/styles/digital-garden-base.css" rel="stylesheet">
         {%-if meta.themeStyle%}
             <link href="/styles/obsidian-base.css" rel="stylesheet">
@@ -20,8 +20,8 @@
             {%-if not meta.themeStyle%}
                 <div class="font-bg"> &#x1F60E; </div>
             {%endif%}
-            <h1>There is nothing here</h1>
-            <p>If you got here from a link, this note is probably not made public</p>
+            <h1>Aquí no hay nada</h1>
+            <p>Si has llegado aquí siguiendo un enlace, es posible que la nota correspondiente aún no ha sido creada o no se ha publicado.</p>
             <a href="/">Go back home</a>
         </div>
     </body>
