--- a/src/site/auth-test.njk
+++ b/src/site/auth-test.njk
@@ -3,15 +3,15 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Simple Demo is Simple</title>
+	<title>Prueba de Autenticación</title>
 	<style>
 	</style>
 
 </head>
 <body>
 
-<h1>Simple Demo is Simple</h1>
-
+<h1>Prueba de autenticación</h1>
+<p>Prueba de autenticación por medio de Auth0 usando Stack Overflow OAuth.</p>
 <button id="login" style="display:none">Login</button>
 <button id="logout" style="display:none">Logout</button>
 <div id="profile" style="display:none"></div>
