--- a/src/site/auth-test.njk
+++ b/src/site/auth-test.njk
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <!-- Adaptación de código publicadoe en https://www.raymondcamden.com/2022/07/11/using-auth0-login-with-javascript-some-tips -->
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Prueba de Autenticación</title>
-	<style>
-	</style>
+<html lang="{{ meta.mainLanguage }}">
+    <head>
+        <title>Abierto</title>
+        <link href="/styles/digital-garden-base.css" rel="stylesheet">
+        {%-if meta.themeStyle%}
+            <link href="/styles/obsidian-base.css" rel="stylesheet">
+    	    <link href="{{meta.themeStyle}}" rel="stylesheet">
+        {% else %}
+            <link href="/styles/style.css" rel="stylesheet">
+        {%endif%}
 
-</head>
-<body>
+        <link href="/styles/custom-style.css" rel="stylesheet">
+        
+    </head>
+    <body class="theme-{{meta.baseTheme}} markdown-preview-view">
+        <div class="content centered">
 
-<h1>Prueba de autenticación</h1>
-<p>Prueba de autenticación por medio de Auth0 usando Stack Overflow OAuth.</p>
-<button id="login" style="display:none">Login</button>
-<button id="logout" style="display:none">Logout</button>
-<div id="profile" style="display:none"></div>
+            {%-if not meta.themeStyle%}
+                <div class="font-bg"> &#128706;<!-- Passport Control--> </div>
+            {%endif%}
+            
+	    <h1>Prueba de autenticación</h1>
+	    <p>Prueba de autenticación por medio de Auth0 usando Stack Overflow OAuth.</p>
+	    <button id="login" style="display:none">Login</button>
+	    <button id="logout" style="display:none">Logout</button>
+	    <div id="profile" style="display:none"></div>
 
-<script src="https://cdn.auth0.com/js/auth0-spa-js/1.20/auth0-spa-js.production.js"></script>
+            <a href="/">Volver a inicio</a>
+        </div>
+  
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.j"></script>
 <script>
 
 let loginBtn, logoutBtn, profileDiv;
@@ -32,7 +46,7 @@ async function init() {
 	auth0Client = await createAuth0Client({
 		domain: "dev-0e677ns445hgsklw.us.auth0.com",
 		client_id: "PDxAakKg6Ppof4Oy1NXRzVOQu8CtVFSn",
-		redirect_uri: window.location.origin + "/callback",
+		redirect_uri: window.location.origin,
 	});
 
 	// handle coming back from login
