--- a/src/site/auth-test.njk
+++ b/src/site/auth-test.njk
@@ -30,7 +30,7 @@
             <a href="/">Volver a inicio</a>
         </div>
   
-<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.j"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 <script>
 
 let loginBtn, logoutBtn, profileDiv;
