--- a/src/site/auth-test.njk
+++ b/src/site/auth-test.njk
@@ -40,7 +40,7 @@ document.addEventListener('DOMContentLoaded', init, false);
 
 async function init() {
 	loginBtn = document.querySelector('#login');
-	logoutBtn = Document.Queryselector('#logout');
+	logoutBtn = Document.queryselector('#logout');
 	profileDiv = document.querySelector('#profile');
 
 	auth0Client = await createAuth0Client({
