--- a/src/site/auth-test-00.njk
+++ b/src/site/auth-test-00.njk
@@ -12,6 +12,7 @@
 
         <link href="/styles/custom-style.css" rel="stylesheet">
         
+	<script src="/scripts/server.js" />
     </head>
     <body class="theme-{{meta.baseTheme}} markdown-preview-view">
         <div class="content centered">
@@ -39,8 +40,7 @@
             <p></p><a href="/">Volver a inicio</a></p>
         </div>
   
-	<script type='text/javascript'>
-    
-	</script>
+	<script src="/scripts/app.js" />
+
     </body>
 </html>
