Update and rename auth_config.json to auth_config.njk

--- a/src/site/auth_config.njk
+++ b/src/site/auth_config.njk
@@ -1,3 +1,6 @@
+---
+permalink: "/auth_config.json"
+---
 {
   "domain": "dev-0e677ns445hgsklw.us.auth0.com",
   "clientId": "PDxAakKg6Ppof4Oy1NXRzVOQu8CtVFSn"
