--- a/src/site/auth_config.njk
+++ b/src/site/auth_config.njk
@@ -1,5 +1,6 @@
 ---
-permalink: "/auth_config.json"
+permalink: /auth_config.json
+eleventyExcludeFromCollections: true
 ---
 {
   "domain": "dev-0e677ns445hgsklw.us.auth0.com",
