--- a/src/site/_includes/components/user/common/beforeContent/auth-status.njk
+++ b/src/site/_includes/components/user/common/beforeContent/auth-status.njk
@@ -1,14 +1,38 @@
-<div class="hidden" id="gated-content">
-  <p>
-    You're seeing this content because you're currently
-    <strong>logged in</strong>.
-  </p>
-  <label>
-    Access token:
-    <pre id="ipt-access-token"></pre>
-  </label>
-  <label>
-    User profile:
-    <pre id="ipt-user-profile"></pre>
-  </label>
+<div id="content-home" class="page">
+  <div class="text-center hero">
+    
+      <img
+        class="mb-3 app-logo"
+        src="/img/logo.png"
+        alt="JavaScript logo"
+        width="75"
+      />
+      
+    <h1 class="mb-4">JavaScript Sample Project</h1>
+
+    <p class="lead">
+      This is a sample application that demonstrates an authentication
+      flow for an SPA, using plain JavaScript
+    </p>
+  </div>
+</div>
+<div class="page" id="content-profile">
+  <div class="container">
+    <div class="row align-items-center profile-header">
+      <div class="col-md-2">
+        <img
+          alt="User's profile picture"
+          class="rounded-circle img-fluid profile-image mb-3 mb-md-0"
+        />
+      </div>
+      <div class="col-md">
+        <h2 class="user-name"></h2>
+        <p class="lead text-muted user-email"></p>
+      </div>
+    </div>
+    <div class="row">
+      <pre class="rounded">
+        <code id="profile-data" class="json"></code></pre>
+    </div>
+  </div>
 </div>
