--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -1,2 +1,5 @@
-<button class="btn btn-success" id="loginBtn">Login or Signup</button>
-<button class="btn btn-success d-none" id="logoutBtn">Logout</button>
+<!-- barra de botones -->
+<div>
+  <button class="btn btn-success" id="loginBtn">Login or Signup</button>
+  <button class="btn btn-success d-none" id="logoutBtn">Logout</button>
+</div>
