Adecuar css de demo

--- a/src/site/styles-demo.njk
+++ b/src/site/styles-demo.njk
@@ -1,6 +1,11 @@
+---
+permalink: /css/main.css
+eleventyExcludeFromCollections: true
+---
 .hidden {
   display: none;
 }
+
 label {
   margin-bottom: 10px;
   display: block;
