--- a/src/site/auth-demo.njk
+++ b/src/site/auth-demo.njk
@@ -166,7 +166,7 @@
           <div class="text-center hero">
             <img
               class="mb-3 app-logo"
-              src="/images/logo.png"
+              src="/img/logo.png"
               alt="JavaScript logo"
               width="75"
             />
