--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -1,2 +1,1 @@
-<button id="btn-login" disabled="true" onclick="login()">Log in</button>
-<button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+<!-- Buttons -->
