--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -1,1 +1,3 @@
 <!-- Buttons -->
+<button id="qsLoginBtn" onclick="login()">Log in</button>
+<button id="qsLogoutBtn" onclick="logout()">Log out</button>
