--- a/src/site/_includes/components/user/common/footer/auth.njk
+++ b/src/site/_includes/components/user/common/footer/auth.njk
@@ -1,2 +1,2 @@
-<script source="/scripts/auth-ui.js">
-<script source="/scripts/auth.js">
+<script source="/scripts/auth-ui.js" />
+<script source="/scripts/auth.js" />
