--- a/src/site/_includes/components/user/common/footer/auth.njk
+++ b/src/site/_includes/components/user/common/footer/auth.njk
@@ -1,2 +1,3 @@
-<script source="/scripts/auth-ui.js" />
-<script source="/scripts/auth.js" />
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+<script source="/scripts/auth-ui.js"></script>
+<script source="/scripts/auth.js"></script>
