--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -1,3 +1,3 @@
 <!-- Buttons -->
-<button id="qsLoginBtn" onclick="login()">Log in</button>
-<button id="qsLogoutBtn" onclick="logout()">Log out</button>
+<button id="qsLoginBtn" onclick="login()" class="auth-invisible hidden">Log in</button>
+<button id="qsLogoutBtn" onclick="logout()" class="auth-visible hidden">Log out</button>
