--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -3,7 +3,7 @@
 
 <div class="auth-visible hidden">
   <!-- Profile image should be set to the profile picture from the id token -->
-  <img alt="Profile picture" class="nav-user-profile profile-image rounded-circle"width="50" />
+  <img alt="Profile picture" class="profile-image" width="50" />
   
   <!-- Show the user's full name from the id token here -->
   <div class="user-name"></div>
