--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -1,34 +1,22 @@
 {# Archivo para mostrar en todas las páginas, si no está autenticado el botón Login #}
 {# y si lo está el botón Log out y los datos esenciales de perfil de usuario #}
 
-<div class="auth-visible hidden">
-  <!-- Profile image should be set to the profile picture from the id token -->
-  <img alt="Profile picture" class="profile-image" width="50" />
-  
-  <!-- Show the user's full name from the id token here -->
-  <div class="user-name"></div>
-    <a href="/profile" class="route-link"><i class="fas fa-user"></i> Profile</a>
-    <button	id="qsLogoutBtn" onclick="logout()"><i class="fas fa-power-off"></i> Log out</button>
-  </div>
-  <!-- Responsive login button: show if NOT authenticated -->
-  <div class="auth-invisible">
-    <button class="auth-invisible hidden" id="qsLoginBtn" onclick="login()">Log in</button>
-  </div>
-  <!-- /Responsive login button -->
+<!-- Login button: show if NOT authenticated -->
+<div class="auth-invisible">
+  <button class="auth-invisible hidden" id="qsLoginBtn" onclick="login()">Log in</button>
 </div>
-<!-- Responsive profile: show if authenticated -->
+<!-- /Login button -->
+
+<!-- Profile: show if authenticated -->
 <div class="auth-visible hidden">
   <span class="user-info">
     <!-- Profile image should be set to the profile picture from the id token -->
-    <img  alt="Profile picture"	class="profile-image" width="50"/>
+    <img alt="Profile picture"	class="profile-image" width="50"/>
     <!-- Show the user's full name from the id token here -->
     <h6 class="user-name"></h6>
-  </span>
-  <span>
-    <i class="fas fa-user mr-3"></i>
-    <a href="/profile" class="route-link">Profile</a>
-  </span>
-  <button id="qsLogoutBtn" onclick="logout()"><i class="fas fa-power-off mr-3"></i>Log out</button>
+  </span>  
+  <a href="/profile" class="route-link">Profile</a>
+  <button id="qsLogoutBtn" onclick="logout()">Log out</button>
 </div>
 
 
