--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -12,8 +12,8 @@
   <span class="user-info">
     <!-- Profile image should be set to the profile picture from the id token -->
     <img alt="Profile picture"	class="profile-image" width="50"/>
-    <!-- Show the user's full name from the id token here -->
-    <h6 class="user-name"></h6>
+    <!-- Show the user's display name from the id token here -->
+    <h6 class="display_name"></h6>
   </span>  
   <a href="/profile" class="route-link">Profile</a>
   <button id="qsLogoutBtn" onclick="logout()">Log out</button>
