--- a/src/site/_includes/components/user/common/footer/auth.njk
+++ b/src/site/_includes/components/user/common/footer/auth.njk
@@ -1,3 +1,4 @@
 <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script src="/scripts/auth-ui.js"></script>
 <script src="/scripts/auth.js"></script>
