--- a/src/site/auth_config.njk
+++ b/src/site/auth_config.njk
@@ -4,5 +4,6 @@ eleventyExcludeFromCollections: true
 ---
 {
   "domain": "dev-0e677ns445hgsklw.us.auth0.com",
-  "clientId": "PDxAakKg6Ppof4Oy1NXRzVOQu8CtVFSn"
+  "clientId": "PDxAakKg6Ppof4Oy1NXRzVOQu8CtVFSn",
+  "scope": "openid profile"
 }
