--- a/src/site/404.njk
+++ b/src/site/404.njk
@@ -22,7 +22,7 @@
             {%endif%}
             <h1>Aquí no hay nada</h1>
             <p>Si has llegado aquí siguiendo un enlace, es posible que la nota correspondiente aún no ha sido creada o no se ha publicado.</p>
-            <a href="/">Go back home</a>
+            <a href="/">Volver al inicio</a>
         </div>
     </body>
 </html>
