--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -21,9 +21,9 @@
   }
 </style>
 <!-- Login button: show if NOT authenticated -->
-<div class="auth-invisible">
-  <button class="auth-invisible hidden" id="qsLoginBtn" onclick="login()">Log in</button>
-</div>
+<section class="auth-invisible">
+  <button id="qsLoginBtn" onclick="login()">Log in</button>
+</section>
 <!-- /Login button -->
 
 <!-- Profile: show if authenticated -->
