--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -25,7 +25,7 @@
 <!-- Profile: show if authenticated -->
 <section class="header-container auth-visible hidden">
   
-    <span class="user-info">
+    <span class="user-info left">
       <div class="left">
         <!-- Profile image should be set to the profile picture from the id token -->
         <img alt="Profile picture" class="profile-image" width="50"/>
@@ -36,7 +36,7 @@
        </div>
     </span> 
   <div class="right">
-    <a href="/profile" class="route-link">Profile</a>
+    <a href="/profile" class="route-link">Profile</a>&emsp;
     <button id="qsLogoutBtn" onclick="logout()">Log out</button>
   </div>
 </section>
