--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -26,16 +26,12 @@
 <section class="header-container auth-visible hidden">
   
     <span class="user-info left">
-      <div class="left">
         <!-- Profile image should be set to the profile picture from the id token -->
         <img alt="Profile picture" class="profile-image" width="50"/>
-      </div>
-      <div class="right">
         <!-- Show the user's display name from the id token here -->
-        <h6 class="display_name"></h6>
+        <span class="display_name" style="font-size:larger; font-weight: bold;"></span>
        </div>
-    </span> 
-  <div class="right">
+      <div class="right">
     <a href="/profile" class="route-link">Profile</a>&emsp;
     <button id="qsLogoutBtn" onclick="logout()">Log out</button>
   </div>
