--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -2,18 +2,19 @@
 {# y si lo está el botón Log out y los datos esenciales de perfil de usuario #}
 <style>
   .header-container {
-    width: 80%;
     margin: auto;
-    padding: 10px;
+    padding: 10px;    
   }
   
   .left {
     width: 15%;
     float: left;
+    text-align: center;
   }
   
   .right {
     margin-left: 15%;
+    text-align: center;
   }
 </style>
 <!-- Login button: show if NOT authenticated -->
