--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -29,7 +29,7 @@
     <!-- Profile image should be set to the profile picture from the id token -->
     <img alt="Profile picture" class="profile-image" width="50"/>
     <!-- Show the user's display name from the id token here -->
-    <span class="display_name" style="font-size:larger; font-weight: bold;"></span>
+    <span class="nickname" style="font-size:larger; font-weight: bold;"></span>
   </div>
   <div class="right">
     <a href="/profile" class="route-link">Profile</a>&emsp;
