--- a/src/site/_includes/components/user/common/header/auth-buttons.njk
+++ b/src/site/_includes/components/user/common/header/auth-buttons.njk
@@ -32,7 +32,7 @@
     <span class="nickname" style="font-size:larger; font-weight: bold;"></span>
   </div>
   <div class="right">
-    <a href="/profile" class="route-link hidden">Profile</a>&emsp;
+    <a href="/profile" class="route-link">Profile</a>&emsp;
     <button id="qsLogoutBtn" onclick="logout()">Log out</button>
   </div>
 </section>
