--- a/src/site/_includes/components/user/common/footer/00.links.njk
+++ b/src/site/_includes/components/user/common/footer/00.links.njk
@@ -1,4 +1,4 @@
-<div style="align-text:center;">
+<div style="text-align:center;">
   <a href="/privacidad" title="Política de Privacidad">Politica de Privacidad</a>&emsp;
   <a href="/terminos" title="Términos y Condiciones del Servicio">Términos y Condiciones</a>&emsp;
   <a href="/ayuda" title="Ayuda">Ayuda</a>
