--- a/src/site/_includes/components/user/common/footer/50.links.njk
+++ b/src/site/_includes/components/user/common/footer/50.links.njk
@@ -1,5 +1,5 @@
-<div class="footer" style="text-align:center;">
+<footer style="text-align:center;">
   <a href="/privacidad" title="Política de Privacidad">Politica de Privacidad</a>&emsp;
   <a href="/terminos" title="Términos y Condiciones del Servicio">Términos y Condiciones</a>&emsp;
   <a href="/ayuda" title="Ayuda">Ayuda</a>
-</div>
+</footer>
