--- a/src/site/styles/user/grid.css
+++ b/src/site/styles/user/grid.css
@@ -16,8 +16,11 @@ nav {
 main {
     grid-area: main;
 }
-sidebar-container {
+aside {
     grid-area: aside;
+}
+.sidebar {
+    display: block;
 }
 footer {
     grid-area: footer;
