--- a/src/site/styles/user/layouts.css
+++ b/src/site/styles/user/layouts.css
@@ -1,7 +1,7 @@
 footer {
   height: 100px;
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom: 0;
   z-index: -1;
   text-align: center;
