--- a/src/site/styles/user/layouts.css
+++ b/src/site/styles/user/layouts.css
@@ -1,8 +1,8 @@
-footer {
-  height: 100px;
-  width: 100%;
-  position: relative;
-  bottom: 0;
-  z-index: -1;
-  text-align: center;
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+footer{
+    margin-top: auto;
 }
