--- a/src/site/styles/user/layouts.css
+++ b/src/site/styles/user/layouts.css
@@ -1,9 +1,4 @@
-body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-footer {
-    margin-top: auto;
-    display: block;
+aside {
+    display: inline-block;
+    min-height: 350px;
 }
